--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -891,50 +891,26 @@ document.querySelectorAll('.footer a').forEach(link => {
 
 
 
-
       async function useDiceChest(userName, rewardName, encodedOutcomes, quantity) {
-    try {
-        const outcomes = JSON.parse(atob(decodeURIComponent(encodedOutcomes)));
+  try {
+    const outcomes = JSON.parse(atob(decodeURIComponent(encodedOutcomes)));
 
-        const qty = parseInt(quantity, 10);
-        if (isNaN(qty) || qty <= 0) {
-            throw new Error("Invalid quantity selected");
-        }
-
-        const userRewardsResponse = await fetch(`https://beemazing.onrender.com/api/user-rewards?adminEmail=${encodeURIComponent(adminEmail)}`);
-        const userRewardsData = await userRewardsResponse.json();
-        if (!userRewardsResponse.ok) throw new Error(userRewardsData.error || "Failed to fetch user rewards");
-
-        const rewards = userRewardsData.userRewards[userName] || [];
-        const matchingRewards = rewards.filter(r => r.name === rewardName);
-        if (matchingRewards.length < qty) {
-            throw new Error(`Not enough ${rewardName} rewards to use (${matchingRewards.length} available)`);
-        }
-
-        // Remove 'qty' instances
-        for (let i = 0; i < qty; i++) {
-            const rewardIndex = rewards.findIndex(r => r.name === rewardName);
-            if (rewardIndex === -1) break;
-            rewards.splice(rewardIndex, 1);
-        }
-
-        await fetch("https://beemazing.onrender.com/api/user-rewards", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ adminEmail, userRewards: { [userName]: rewards } })
-        });
-
-        // ✅ Build correct data to pass to rollthedice.html
-        const fullChest = { type: "dice", outcomes: outcomes };
-        const encoded = encodeURIComponent(btoa(JSON.stringify(fullChest)));
-
-        window.location.href = `/BeeMazing-Y1/mobile/4-Market/rollthedice.html?user=${encodeURIComponent(userName)}&data=${encoded}&admin=${encodeURIComponent(adminEmail)}`;
-    } catch (err) {
-        console.error("Error using dice chest:", err);
-        alert(`Failed to process ${rewardName}: ${err.message}. Please try again.`);
+    const qty = parseInt(quantity, 10);
+    if (isNaN(qty) || qty <= 0) {
+      throw new Error("Invalid quantity selected");
     }
-}
 
+    // ✅ DON'T remove the reward yet!
+
+    const fullChest = { type: "dice", outcomes: outcomes };
+    const encoded = encodeURIComponent(btoa(JSON.stringify(fullChest)));
+
+    window.location.href = `/BeeMazing-Y1/mobile/4-Market/rollthedice.html?user=${encodeURIComponent(userName)}&data=${encoded}&admin=${encodeURIComponent(adminEmail)}&rewardName=${encodeURIComponent(rewardName)}`;
+  } catch (err) {
+    console.error("Error using dice chest:", err);
+    alert(`Failed to process ${rewardName}: ${err.message}. Please try again.`);
+  }
+}
 
 
 
