Fix roll the dice #18

--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -349,7 +349,7 @@
       </a>
       <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
           <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
-          <span>Profile5</span>
+          <span>Profile</span>
       </a>
       <a href="#" id="marketButton" class="footer-icon active" aria-label="Market">
           <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
