Fix roll the dice #21

--- a/mobile/4-Market/rollthedice.html
+++ b/mobile/4-Market/rollthedice.html
@@ -127,11 +127,13 @@
   <ul class="reward-list" id="rewardLegend"></ul>
   
   <!-- Footer with Test Your Luck Later button -->
-  <div id="testLuckFooter" style="position:fixed; bottom:0; width:100%; background:#212121; padding:12px 30px; display:flex; justify-content:center; align-items:center; box-sizing:border-box;">
+  <div id="testLuckFooter" style="position:fixed; bottom:0; width:100%; padding:12px 30px; display:flex; justify-content:center; align-items:center; box-sizing:border-box;">
     <button onclick="testLuckLater()" style="background:#2A2B32; color:#FFC107; font-size:16px; padding:10px 20px; border:none; border-radius:8px; font-weight:bold; cursor:pointer;">
       Test Your Luck Later
     </button>
   </div>
+  
+  
   
   
   
