Fix roll the dice #24

--- a/mobile/4-Market/rollthedice.html
+++ b/mobile/4-Market/rollthedice.html
@@ -127,11 +127,12 @@
   <ul class="reward-list" id="rewardLegend"></ul>
   
   <!-- Footer with Test Your Luck Later button -->
-  <div style="position:fixed; bottom:0; left:0; right:0; padding:12px 0; display:flex; justify-content:center; align-items:center; box-sizing:border-box;">
+  <div id="testLuckFooter" style="position:fixed; bottom:0; left:0; right:0; padding:12px 0; display:flex; justify-content:center; align-items:center; box-sizing:border-box;">
     <button onclick="testLuckLater()" style="background:#2A2B32; color:#FFC107; font-size:16px; padding:10px 20px; border:none; border-radius:8px; font-weight:bold; cursor:pointer;">
       Test Your Luck Later
     </button>
   </div>
+  
   
   
   
