New combined rotation logic #4

--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -502,7 +502,7 @@ body {
     <div class="footer">
         <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/SettingsBtn.png" alt="Home" />
-            <span>User Settings5</span>
+            <span>User Settings7</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
@@ -1194,8 +1194,10 @@ async function finishTask(userName, task, button, selectedDate) {
     const selected = document.querySelector(".day.selected");
     if (selected) {
         selected.scrollIntoView({ behavior: "smooth", inline: "center" });
+        loadTasksForDate(selected.dataset.date); // 🐝 <-- Automatically load today's tasks
     }
 }, 50);
+
 
 
         }
