--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -502,7 +502,7 @@ body {
     <div class="footer">
         <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/SettingsBtn.png" alt="Home" />
-            <span>User Settings7</span>
+            <span>User Settings</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
